feat: add header & add main sections

--- a/index.html
+++ b/index.html
@@ -3,8 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
+  <header class="header">
+    <div class="container">
+      <nav class="header__nav">
+        <ul class="nav-menu">
+          <li class="nav-menu__item"><a href="#contacts" class="nav-menu-link">Contacts</a></li>
+          <li class="nav-menu__item"><a href="#summary" class="nav-menu-link">Summary</a></li>
+          <li class="nav-menu__item"><a href="#skills" class="nav-menu-link">Skills</a></li>
+          <li class="nav-menu__item"><a href="#code" class="nav-menu-link">Code</a></li>
+          <li class="nav-menu__item"><a href="#projects" class="nav-menu-link">Projects</a></li>
+          <li class="nav-menu__item"><a href="#education" class="nav-menu-link">Education</a></li>
+          <li class="nav-menu__item"><a href="#english" class="nav-menu-link">English</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <div class="container">
+      <section class="profile" id="profile"></section>
+      <!-- /#profile.profile -->
+      <section class="contacts" id="contacts"></section>
+      <!-- /#contacts.contacts -->
+      <section class="summary" id="summary"></section>
+      <!-- /#summary.summary -->
+      <section class="skills" id="skills"></section>
+      <!-- /#skills.skills -->
+      <section class="code" id="code"></section>
+      <!-- /#code.code -->
+      <section class="courses" id="courses"></section>
+      <!-- /#courses.courses -->
+      <section class="projects" id="projects"></section>
+      <!-- /#projects.projects -->
+      <section class="education" id="education"></section>
+      <!-- /#education.education -->
+      <section class="languages" id="languages"></section>
+      <!-- /#languages.languages -->
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container"></div>
+  </footer>
 </body>
 </html>
