--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>CV</title>
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -22,24 +22,94 @@
     </div>
   </header>
   <main class="main">
-    <div class="container">
-      <section class="profile" id="profile"></section>
+    <div class="container main-container">
+      <section class="section profile" id="profile">
+        <div class="profile-container">
+          <img class="profile-image" src="./assets/img/my-photo.jpg" alt="Ilya Balykov">
+        </div>
+        <div class="profile-container">
+          <h1 class="section-title profile-title">Ilya Balykov</h1>
+          <h2 class="profile-prof">junior front-end developer</h2>
+        </div>
+      </section>
       <!-- /#profile.profile -->
-      <section class="contacts" id="contacts"></section>
+      <section class="section contacts" id="contacts">
+        <h2 class="section-title">Contacts</h2>
+        <ul>
+          <li>
+            <span class="contacts-section-type">tel:</span>
+            <a class="contacts-section-link" href="tel:+79177147738">+79177147738</a>
+          </li>
+          <li>
+            <span class="contacts-section-type">e-mail</span>
+            <a class="contacts-section-link" href="mailto:balkov.ilya.88@gmail.com">balkov.ilya.88@gmail.com</a>
+          </li>
+          <li>
+            <span class="contacts-section-type">Telegram:</span>
+            <a class="contacts-section-link" href="@ilya_bal">@ilya_bal</a>
+          </li>
+        </ul>
+      </section>
       <!-- /#contacts.contacts -->
-      <section class="summary" id="summary"></section>
+      <section class="section summary" id="summary">
+        <h2 class="section-title">Summary</h2>
+        <p>A year ago, the topic of web programming became very interesting for me.
+          During this time, I have completed several courses and many marathons.
+          My main goal is to make this hobby turn into my main profession.</p>
+      </section>
       <!-- /#summary.summary -->
-      <section class="skills" id="skills"></section>
+      <section class="section skills" id="skills">
+        <h2 class="section-title">Skills</h2>
+        <ul class="skills__nav">
+          <li class="skills-nav__item">WEB-development: HTML5, CSS3, JavaScript</li>
+          <li class="skills-nav__item">Frameworks and libraries: jQuery, React</li>
+          <li class="skills-nav__item">Version control: Git</li>
+          <li class="skills-nav__item">Graphics: Figma</li>
+        </ul>
+      </section>
       <!-- /#skills.skills -->
-      <section class="code" id="code"></section>
+      <section class="section code" id="code">
+        <h2 class="section-title">Code</h2>
+        <pre>
+          <code>
+          var countBits = function(n) {
+            let count = 0;
+            while (n > 0.5) {
+              n = n / 2;
+              if (n !== Math.ceil(n)) {
+                count += 1;
+                n = Math.floor(n);
+              }
+            }
+            return count
+          };
+        </code>
+        </pre>
+
+      </section>
       <!-- /#code.code -->
-      <section class="courses" id="courses"></section>
+      <section class="section courses" id="courses">
+        <h2 class="section-title">Courses</h2>
+      </section>
       <!-- /#courses.courses -->
-      <section class="projects" id="projects"></section>
+      <section class="section projects" id="projects">
+        <h2 class="section-title">Projects</h2>
+      </section>
       <!-- /#projects.projects -->
-      <section class="education" id="education"></section>
+      <section class="section education" id="education">
+        <h2 class="section-title">Education</h2>
+        <h3 class="education-university">Volga State University of Technology</h3>
+        <h4 class="education-specialty">[11.03.02] Infocommunication technologies and communication systems</h4>
+        <h4 class="education-university">College of Technology</h4>
+        <h5 class="education-specialty">[210308] Maintenance and repair of radio electronic equipment</h5>
+      </section>
       <!-- /#education.education -->
-      <section class="languages" id="languages"></section>
+      <section class="section languages" id="languages">
+        <h2 class="section-title">Languages</h2>
+        <ul>
+          <li>English: A2</li>
+        </ul>
+      </section>
       <!-- /#languages.languages -->
     </div>
   </main>
