feat: add footer content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li class="nav-menu__item"><a href="#code" class="nav-menu-link">Code</a></li>
           <li class="nav-menu__item"><a href="#projects" class="nav-menu-link">Projects</a></li>
           <li class="nav-menu__item"><a href="#education" class="nav-menu-link">Education</a></li>
-          <li class="nav-menu__item"><a href="#english" class="nav-menu-link">English</a></li>
+          <li class="nav-menu__item"><a href="#languages" class="nav-menu-link">English</a></li>
         </ul>
       </nav>
     </div>
@@ -114,7 +114,19 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="container"></div>
+    <div class="container footer-container">
+      <div class="footer__left-side">
+        <span class="footer-year">© 2022</span>
+        <a class="footer-git-link"href="https://github.com/IlyaBalykov/">
+          <img class="footer-git" src="./assets/img/github.png" alt="GitHub">
+        </a>
+      </div>
+      <div class="footer__right-side">
+        <a class="footer-rss-link" href="https://rs.school/js/">
+          <img class="footer-rss" src="./assets/svg/rs_school.svg" alt="RSS">
+        </a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
