--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
         <h2 class="section-title">Contacts</h2>
         <ul>
           <li>
-            <span class="contacts-section-type">tel:</span>
+            <span class="contacts-section-type">Locatton</span>
+            <a class="contacts-section-link" href="#">Yoshkar-Oa, Russia</a>
+          </li>
+          <li>
+            <span class="contacts-section-type">Phone</span>
             <a class="contacts-section-link" href="tel:+79177147738">+79177147738</a>
           </li>
           <li>
-            <span class="contacts-section-type">e-mail</span>
+            <span class="contacts-section-type">Email</span>
             <a class="contacts-section-link" href="mailto:balkov.ilya.88@gmail.com">balkov.ilya.88@gmail.com</a>
           </li>
           <li>
@@ -53,9 +57,14 @@
       <!-- /#contacts.contacts -->
       <section class="section summary" id="summary">
         <h2 class="section-title">Summary</h2>
-        <p>A year ago, the topic of web programming became very interesting for me.
-          During this time, I have completed several courses and many marathons.
-          My main goal is to make this hobby turn into my main profession.</p>
+        <p>After graduating from college, I got a job as an installer of electronic equipment and devices
+          of the 5th grade, then increased the grade to 6th and rested on the "ceiling".
+          Then he entered the university with a degree in infocommunication technologies and communication systems,
+          where he studied the hardware of devices that are used in various types of communications.
+          Since last year, I was interested in the software component and my attention was attracted
+          not by the development of programs for communication equipment, but by web development,
+          in particular, the frontend. I take many courses and intensives that allow me to learn
+          new things in front-end development.</p>
       </section>
       <!-- /#summary.summary -->
       <section class="section skills" id="skills">
@@ -90,10 +99,54 @@
       <!-- /#code.code -->
       <section class="section courses" id="courses">
         <h2 class="section-title">Courses</h2>
+        <ul>
+          <li>
+            <a href="https://hyperskill.org/profile/84815089">JetBrains Academy: Frontend Developer</a>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Coursera: Responsive Web Design (continue to study)</a>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+              <li>jQuery</li>
+              <li>Bootstrap</li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Sololearn</a>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+              <li>jQuery</li>
+              <li>Responsive Web Design</li>
+            </ul>
+          </li>
+        </ul>
       </section>
       <!-- /#courses.courses -->
       <section class="section projects" id="projects">
         <h2 class="section-title">Projects</h2>
+        <ul>
+          <li>
+            <a href="https://github.com/IlyaBalykov/dictionary-guato">Dictionary</a>
+          </li>
+          <li>
+            <a href="https://github.com/IlyaBalykov/Flashcards">Flashcards</a>
+          </li>
+          <li>
+            <a href="https://github.com/IlyaBalykov/Virtual_Piano">Virtual Piano</a>
+          </li>
+          <li>
+            <a href="https://github.com/IlyaBalykov/Open_Space">Open Space</a>
+          </li>
+        </ul>
       </section>
       <!-- /#projects.projects -->
       <section class="section education" id="education">
@@ -107,6 +160,7 @@
       <section class="section languages" id="languages">
         <h2 class="section-title">Languages</h2>
         <ul>
+          <li>Russian: Native</li>
           <li>English: A2</li>
         </ul>
       </section>
