--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="nav-menu__item"><a href="#code" class="nav-menu-link">Code</a></li>
           <li class="nav-menu__item"><a href="#projects" class="nav-menu-link">Projects</a></li>
           <li class="nav-menu__item"><a href="#education" class="nav-menu-link">Education</a></li>
-          <li class="nav-menu__item"><a href="#languages" class="nav-menu-link">English</a></li>
+          <li class="nav-menu__item"><a href="#languages" class="nav-menu-link">Languages</a></li>
         </ul>
       </nav>
     </div>
@@ -152,10 +152,16 @@
       <!-- /#projects.projects -->
       <section class="section education" id="education">
         <h2 class="section-title">Education</h2>
-        <h3 class="education-university">Volga State University of Technology</h3>
-        <h4 class="education-specialty">[11.03.02] Infocommunication technologies and communication systems</h4>
-        <h4 class="education-university">College of Technology</h4>
-        <h5 class="education-specialty">[210308] Maintenance and repair of radio electronic equipment</h5>
+        <ul>
+          <li>
+            <h3 class="education-university">Volga State University of Technology</h3>
+            <h4 class="education-specialty">[11.03.02] Infocommunication technologies and communication systems</h4>
+          </li>
+          <li>
+            <h3 class="education-university">College of Technology</h3>
+            <h4 class="education-specialty">[210308] Maintenance and repair of radio electronic equipment</h4>
+          </li>
+        </ul>
       </section>
       <!-- /#education.education -->
       <section class="section languages" id="languages">
