fix: spelling mistakes & telegram link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class="section-title">Contacts</h2>
         <ul>
           <li>
-            <span class="contacts-section-type">Locatton</span>
+            <span class="contacts-section-type">Location</span>
             <a class="contacts-section-link" href="#">Yoshkar-Oa, Russia</a>
           </li>
           <li>
@@ -51,7 +51,7 @@
           </li>
           <li>
             <span class="contacts-section-type">Telegram:</span>
-            <a class="contacts-section-link" href="@ilya_bal">@ilya_bal</a>
+            <a class="contacts-section-link" href="https://t.me/id_kurt">@id_kurt</a>
           </li>
         </ul>
       </section>
@@ -177,7 +177,7 @@
   <footer class="footer">
     <div class="container footer-container">
       <div class="footer__left-side">
-        <span class="footer-year">© 2022</span>
+        <span class="footer-year">© 2023</span>
         <a class="footer-git-link" href="https://github.com/IlyaBalykov/">
           <img class="footer-git" src="./assets/img/github.png" alt="GitHub">
         </a>
