fix:change  entity symbols

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </li>
           <li>
             <span class="contacts-section-type">Telegram:</span>
-            <a class="contacts-section-link" href="https://t.me/id_kurt">@id_kurt</a>
+            <a class="contacts-section-link" href="https://t.me/id_kurt">&copy;id_kurt</a>
           </li>
         </ul>
       </section>
@@ -155,11 +155,11 @@
         <ul>
           <li>
             <h3 class="education-university">Volga State University of Technology</h3>
-            <h4 class="education-specialty">[11.03.02] Infocommunication technologies and communication systems</h4>
+            <h4 class="education-specialty">&lsqb;11.03.02&rsqb; Infocommunication technologies and communication systems</h4>
           </li>
           <li>
             <h3 class="education-university">College of Technology</h3>
-            <h4 class="education-specialty">[210308] Maintenance and repair of radio electronic equipment</h4>
+            <h4 class="education-specialty">&lsqb;210308&rsqb; Maintenance and repair of radio electronic equipment</h4>
           </li>
         </ul>
       </section>
@@ -172,12 +172,11 @@
         </ul>
       </section>
       <!-- /#languages.languages -->
-    </div>
-  </main>
+ </main>
   <footer class="footer">
     <div class="container footer-container">
       <div class="footer__left-side">
-        <span class="footer-year">© 2023</span>
+        <span class="footer-year">&copy; 2023</span>
         <a class="footer-git-link" href="https://github.com/IlyaBalykov/">
           <img class="footer-git" src="./assets/img/github.png" alt="GitHub">
         </a>
