fix: close main-container div

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
         </ul>
       </section>
       <!-- /#languages.languages -->
- </main>
+    </div>
+  </main>
   <footer class="footer">
     <div class="container footer-container">
       <div class="footer__left-side">
