fix: replace '@','>' symbols on entity

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul>
           <li>
             <span class="contacts-section-type">Location</span>
-            <a class="contacts-section-link" href="#">Yoshkar-Oa, Russia</a>
+            <a class="contacts-section-link" href="#">Yoshkar-Ola, Russia</a>
           </li>
           <li>
             <span class="contacts-section-type">Phone</span>
@@ -51,7 +51,7 @@
           </li>
           <li>
             <span class="contacts-section-type">Telegram:</span>
-            <a class="contacts-section-link" href="https://t.me/id_kurt">&copy;id_kurt</a>
+            <a class="contacts-section-link" href="https://t.me/id_kurt">&commat;id_kurt</a>
           </li>
         </ul>
       </section>
@@ -82,17 +82,17 @@
         <h2 class="section-title">Code</h2>
         <pre>
           <code>
-          var countBits = function(n) {
-            let count = 0;
-            while (n > 0.5) {
-              n = n / 2;
-              if (n !== Math.ceil(n)) {
-                count += 1;
-                n = Math.floor(n);
-              }
-            }
+          var countBits = function(n) &lcub;
+            let count = 0&semi;
+            while (n &gt; 0.5) &lcub;
+              n = n &sol; 2&semi;
+              if (n !== Math.ceil(n)) &lcub;
+                count += 1&semi;
+                n = Math.floor(n)&semi;
+              &rcub;
+            &rcub;
             return count
-          };
+          &rcub;&semi;
         </code>
         </pre>
 
